# stds-group7

./: .gitignore  Makefile  README.md  asm-2-code.ipynb  pyproject.toml
data/raw/aemo_data_2018_2025/NSW1/: PRICE_AND_DEMAND_202306_NSW1.csv
data/raw/aemo_data_2018_2025/QLD1/: PRICE_AND_DEMAND_202011_QLD1.csv  PRICE_AND_DEMAND_202012_QLD1.csv  PRICE_AND_DEMAND_202101_QLD1.csv  PRICE_AND_DEMAND_202102_QLD1.csv  PRICE_AND_DEMAND_202103_QLD1.csv  PRICE_AND_DEMAND_202104_QLD1.csv  PRICE_AND_DEMAND_202105_QLD1.csv  PRICE_AND_DEMAND_202106_QLD1.csv  PRICE_AND_DEMAND_202107_QLD1.csv  PRICE_AND_DEMAND_202108_QLD1.csv  PRICE_AND_DEMAND_202109_QLD1.csv  PRICE_AND_DEMAND_202110_QLD1.csv  PRICE_AND_DEMAND_202111_QLD1.csv  PRICE_AND_DEMAND_202112_QLD1.csv  PRICE_AND_DEMAND_202201_QLD1.csv  PRICE_AND_DEMAND_202202_QLD1.csv  PRICE_AND_DEMAND_202203_QLD1.csv  PRICE_AND_DEMAND_202204_QLD1.csv  PRICE_AND_DEMAND_202205_QLD1.csv  PRICE_AND_DEMAND_202206_QLD1.csv  PRICE_AND_DEMAND_202207_QLD1.csv  PRICE_AND_DEMAND_202208_QLD1.csv  PRICE_AND_DEMAND_202209_QLD1.csv  PRICE_AND_DEMAND_202210_QLD1.csv  PRICE_AND_DEMAND_202211_QLD1.csv  PRICE_AND_DEMAND_202212_QLD1.csv  PRICE_AND_DEMAND_202409_QLD1.csv  PRICE_AND_DEMAND_202410_QLD1.csv  PRICE_AND_DEMAND_202411_QLD1.csv  PRICE_AND_DEMAND_202412_QLD1.csv  PRICE_AND_DEMAND_202501_QLD1.csv  PRICE_AND_DEMAND_202502_QLD1.csv  PRICE_AND_DEMAND_202503_QLD1.csv  PRICE_AND_DEMAND_202504_QLD1.csv  PRICE_AND_DEMAND_202505_QLD1.csv  PRICE_AND_DEMAND_202506_QLD1.csv  PRICE_AND_DEMAND_202507_QLD1.csv  PRICE_AND_DEMAND_202508_QLD1.csv
data/raw/aemo_data_2018_2025/TAS1/: PRICE_AND_DEMAND_202011_TAS1.csv  PRICE_AND_DEMAND_202012_TAS1.csv  PRICE_AND_DEMAND_202101_TAS1.csv  PRICE_AND_DEMAND_202102_TAS1.csv  PRICE_AND_DEMAND_202103_TAS1.csv  PRICE_AND_DEMAND_202104_TAS1.csv  PRICE_AND_DEMAND_202105_TAS1.csv  PRICE_AND_DEMAND_202106_TAS1.csv  PRICE_AND_DEMAND_202107_TAS1.csv  PRICE_AND_DEMAND_202108_TAS1.csv  PRICE_AND_DEMAND_202109_TAS1.csv  PRICE_AND_DEMAND_202110_TAS1.csv  PRICE_AND_DEMAND_202111_TAS1.csv  PRICE_AND_DEMAND_202112_TAS1.csv  PRICE_AND_DEMAND_202201_TAS1.csv  PRICE_AND_DEMAND_202202_TAS1.csv  PRICE_AND_DEMAND_202203_TAS1.csv  PRICE_AND_DEMAND_202204_TAS1.csv  PRICE_AND_DEMAND_202205_TAS1.csv  PRICE_AND_DEMAND_202206_TAS1.csv  (+26 more)
data/weather/: avg_weather_20180101_20250911.csv
data/weather/metadata/: NSW_stations.xml  QLD_stations.xml  SA_stations.xml  TAS_stations.xml  VIC_stations.xml  stations.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: stats_timeseries_NSW.ipynb
notebooks/DinhHungNguyen/: 25680909_models.ipynb  25680909_models_fixed_formula.ipynb
notebooks/Robin/: Robin_STDS_assignment2.ipynb
weather_crawler/: README.md  combine_weather_data.py  crawl_temp.py  station_number_parser.py
