[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "group_7___statistical_thinking_for_data_science"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group 7" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "mkdocs",
    "pip",
    "python-dotenv",
    "numpy (>=2.3.3,<3.0.0)",
]
requires-python = "==3.13.5"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["group_7___statistical_thinking_for_data_science"]
force_sort_within_sections = true


