[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "group_7___statistical_thinking_for_data_science"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Group 7" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "flake8",
    "isort",
    "mkdocs",
    "pip",
    "python-dotenv",
    "numpy (>=2.3.3,<3.0.0)",
]
requires-python = "==3.13.5"

[tool.poetry]
name = "group_7___statistical_thinking_for_data_science"
version = "0.0.1"
description = "A short description of the project."
authors = ["Group 7"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
black = "*"
flake8 = "*"
isort = "*"
mkdocs = "*"
pip = "*"
python-dotenv = "*"
numpy = ">=1.26.0,<3.0.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["group_7___statistical_thinking_for_data_science"]
force_sort_within_sections = true


