[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "group_7___statistical_thinking_for_data_science"
version = "0.0.1"
description = "A short description of the project."
authors = ["Group 7"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=1.26,<3.0"
python-dotenv = "*"
pip = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"
isort = "*"
mkdocs = "*"
jupyterlab = "*"
ipykernel = "*"
jupyter = "^1.1.1"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["group_7___statistical_thinking_for_data_science"]
force_sort_within_sections = true
